2. Some GUI changes
3. Some code optimizations and cleaning
=========================================
=============Version 0.3.0===============
1. Added new plugin repository
2. Old properties full removed
3. Added @force option
=========================================
=============Version 0.3.1===============
1. Some fixes
=========================================
=============Version 0.3.2===============
1. Default setting updated
=========================================
=============Version 0.3.3===============
1. Fixed plugin support with multiple plugin versions
2. Added tray notifications
=========================================
=============Version 0.4.0===============
1. Fixed plugin support with multiple plugins
2. Fixed plugin form with multiple plugins
3. Fixed bug in plugin naming
4. Added support for notification plugins (need to redisign some things). 
5. MQ Notification plugin added
=========================================
=============Version 0.4.1===============
1. Fixed plugin loading (few problems not solved)
2. Now SCLauncher minimized to tray
3. Delete plugin button now works, but mandatory plugin will be installed at start up
=========================================
=============Version 0.4.2===============
1. Fixed plugin repo URL.
2. Now SCLauncher not started if already running.
=========================================
=============Version 0.4.3===============
1. Fixed starup logic: SCL starts faster.
=========================================
=============Version 0.4.4===============
0. !!! Java 8 requred for this version !!!
1. Fixed Plugins view bug in "repository connection problem" case.
2. SCLogger implemented. Now SClauncher write logs to sout and file.
3. Updated startUp logic
4. Some GUI updates
5. Updated app exec logic (first triyng to open with system associated application, later by exec(). For java added option to use "java -jar" instead system JRE)
=========================================