@@ -34,6 +34,7 @@ public class LauncherConstants {
     public final static String ApplicationTypeJava = "java";
 
     public final static String SettingsFormTitle = "Settings";
+    public final static String AppPrepareFormTitle = "Prepare application";
     public final static String PluginsFormTitle = "Plugins";
 
 }
