@@ -32,8 +32,9 @@ public class ApacheListingDirectoryRepoClient implements IPluginRepoClient {
     public ApacheListingDirectoryRepoClient() {
 
     }
-    private static void log(String msg){
-        SCLogger.getInstance().log(MethodHandles.lookup().lookupClass().getName(),"INFO",msg);
+
+    private static void log(String msg) {
+        SCLogger.getInstance().log(MethodHandles.lookup().lookupClass().getName(), "INFO", msg);
     }
 
     public void connect(String user, String pass, String serverURL) throws Exception {
