@@ -1,2 +1,2 @@
-Application.version = ${project.version}
-Application.name = ${project.artifactId}
+Application.version=${project.version}
+Application.name=${project.artifactId}
